# rtf_convert

./: .gitignore  CMakeLists.txt  main.cpp  rtfconvert.cpp  專案的歷史程式.txt  專案進階目標.txt  流程紀錄本.txt
20241114 第三課 C與C++的關係/: 20241114 第三課 C與C++的關係.txt  IMG_1.wmf  log.txt
Qt_gui_Module/: GuiFormData.h  GuiObserver.cpp  GuiObserver.h  GuiRequestTranslator.cpp  GuiRequestTranslator.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
sheet_test/: log.txt  sheet_test.txt
src/: CMakeLists.txt
src/Cli_Module/: CMakeLists.txt  CliParser.cpp  CliParser.h  CliRequestResolver.cpp  CliRequestResolver.h  ConsoleObserver.cpp  ConsoleObserver.h  ConversionEngine.cpp  ConversionEngine.h  ConversionRequestResolver.cpp  ConversionRequestResolver.h
src/EncodingProcess_Module/: Decode.cpp  Decode.h  GroupProcessor.cpp  GroupProcessor.h
src/ErrorDetector_Module/: ErrorDetector.cpp  ErrorDetector.h
src/ErrorSystem_Module/: ErrorHandle.cpp  ErrorHandle.h  ErrorSystem.cpp  ErrorSystem.h
src/Executor_Module/: ConversionExecutor.cpp  ConversionExecutor.h
src/Feedback_Module/: IProgressObserver.h  ProgressEvent.h
src/FormatDetection_Module/: RtfFormatDetection.cpp  RtfFormatDetection.h
src/I_O_Moudle/: OutputPathResolver.cpp  OutputPathResolver.h
src/LogSystem_Module/: LogSystem.cpp  LogSystem.h
src/MainProcess_Module/: FileProcessRequest.h  RTFProcessor.cpp  RTFProcessor.h
src/PictProcessor_Module/: pictProcessor.cpp  pictProcessor.h
src/Qt_gui_Module/: CMakeCache.txt.prev  CMakeLists.txt  GuiFormData.h  GuiObserver.cpp  GuiObserver.h  GuiRequestTranslator.cpp  GuiRequestTranslator.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/RtfGroupProcessor_Module/: FieldGroupProcessor.cpp  FieldGroupProcessor.h  RtfPreProcessor.cpp  RtfPreProcessor.h  StartDestinationProcessor.cpp  StartDestinationProcessor.h
src/RtfTableProcessor_Module/: RtfTablePreProcessor.cpp  RtfTablePreProcessor.h
src/SemanticStructure_Module/: Document.cpp  Document.h  Renderer.cpp  Renderer.h
src/SheetProcessor_Module/: SheetProcessor.cpp  SheetProcessor.h
src/Task_Module/: ConversionTask.h  ConversionTaskBuilder.cpp  ConversionTaskBuilder.h  NormalizedConversionRequest.h
src/TextProcessor_Module/: textProcessor.cpp  textProcessor.h
src/Universal_Module/: CommonEnum.h  Console.cpp  Console.h  OutputDirGuard.cpp  OutputDirGuard.h  Version.h
src/thread_Moudle/: MyThread.cpp  MyThread.h
testout/20241114 第三課 C與C++的關係/: 20241114 第三課 C與C++的關係.html  IMG_0.wmf  log.txt
舊的分割嘗試檔案/: ErrorHandle 區塊.txt  ErrorLevel.cpp  ErrorLevel.h  ErrorSystem 區塊.txt  Rtf 格式偵測 區塊.txt  log 系統 區塊.txt  共用 enum .txt  各種型態的解讀語意結構的類別.txt  圖片處理區塊.txt  基礎編碼以及文法錯誤偵測區塊.txt  確保有輸出資料夾的類別工具.txt  群組處理及判斷是否符合處理符號之區塊.txt  處裡完的文字清理區塊.txt  解碼(Decode) 區塊.txt  語意結構與拆成語意結構區塊.txt
